feat(voiceChat): add voice chat functionality

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -25,3 +25,23 @@
   height: 90%;
   overflow-y: scroll;
 }
+
+#post-field {
+  width: 50%;
+}
+
+#validation {
+  display: inline-block;
+  line-height: 38px;
+  padding-left: 10px;
+}
+
+#add-button {
+  width: 30%;
+}
+
+.play-button {
+  width: 50px;
+  height: 50px;
+  background-color: green;
+}
