--- a/views/partials/chat-post.ejs
+++ b/views/partials/chat-post.ejs
@@ -64,6 +64,8 @@
             postErr.show();
           } else {
             postField.val('');
+            message = [];
+            messageResult.text('');
           }
         });
       }
