--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -41,7 +41,16 @@
 }
 
 .play-button {
-  width: 50px;
-  height: 50px;
-  background-color: green;
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+
+  border-left: 50px solid #00B5AD;
+
+  cursor: pointer;
+}
+
+.play-button:hover {
+  border-left: 50px solid #2185D0;
 }
